--- a/Sorting Algorith Visualizer/style.css
+++ b/Sorting Algorith Visualizer/style.css
@@ -22,14 +22,20 @@
     height: 100%;
     flex:.8;
     display: flex;
-    justify-content: space-between;
     text-decoration: none;
     list-style: none;
     align-items: flex-end;
+    justify-content: space-evenly;
     padding: 0 1rem;
 }
+.nav_bar__items .item{
+    margin-right: 1rem;;
+}
 .nav_sotring__items{
-    flex:1;
+    position: relative;
+    right:5%;
+    flex:.6;
+    justify-content: space-evenly;
     display: flex;
     list-style: none;
     align-items: flex-end;
@@ -55,7 +61,7 @@
 .nav_item__range{
     position: relative;
     top:10%;
-    right: 2%;
+    right:5%;
 }
 
 .nav_item__change_array_size{
@@ -101,6 +107,11 @@
     background: green;
 }
 
+.nav_item__array_generete, .nav_item_sort{
+    background-color: blue;
+    border:none;
+    outline: none;
+}
 
 
 
