--- a/color-paletts/styles.css
+++ b/color-paletts/styles.css
@@ -238,6 +238,17 @@ input[type="range"]{
   background:rgb(68,68,68);
 
 }
+.remove-palette-btn{
+  height: 4rem;
+  border:none;
+  cursor: pointer;
+  padding:1rem;
+  margin-right: .5rem;
+  font-size:1.2rem;
+  color:white;
+  background:rgb(100, 7, 7);
+
+}
 .close-library{
     position: sticky;
     top:0;
