--- a/backgammon/style.css
+++ b/backgammon/style.css
@@ -36,6 +36,14 @@ body{
     justify-self: center;
  
 }
+.eaten-container{
+    position: absolute;
+    top:25%;
+    left:46.8%;
+    width:62px;
+    height: 300px;
+    border: 1px solid red;
+}
 
 .dice-container{
     position: relative;
