--- a/backgammon/style.css
+++ b/backgammon/style.css
@@ -30,23 +30,28 @@ body{
 }
 .out-tool{
     width:40px;
-    height: 20px;
+    height: 15px;
+    border: 1px solid gray;
 }
 .out-black-tools,.out-white-tools{
-    width:150px;
-    height: 180px;
+    width: 100px;
+    height: 225px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     background-color: teal;
     position: relative;
     justify-self: center;
 }
+.out-white-tools{
+    justify-content: flex-end;
+}
 
 .eaten-container{
     position: absolute;
-    top:25%;
     left:46.8%;
     width:62px;
-    height: 300px;
-    border: 1px solid red;
+    height: 620px;
 }
 
 .dice-container{
