--- a/backgammon/style.css
+++ b/backgammon/style.css
@@ -13,11 +13,31 @@ body{
     margin-left: 150px;
     width:1000px;
     min-width:1000px;
-    margin-top: 10px;
+    margin-top: 40px;
     height:700px;
     background-image: url('./images/board.png');
     background-repeat: no-repeat;
     background-size: 100%;
+}
+
+.start-new-game{
+    width:400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding:20px;
+    align-items: center;
+    height: 200px;
+    background-color: rgba(0, 0, 0, .2);
+    position: absolute;
+    left:30%;
+    z-index: 2;
+    top:30%;
+}
+
+.win{
+    font-size: 40px;
+    color:red;
 }
 
 .out-tools-container{
@@ -47,8 +67,39 @@ body{
     justify-content: flex-end;
 }
 
+.instructions{
+    position: absolute;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width:800px;
+    height: 650px;
+    position: absolute;
+    background-color: white;
+    top:10%;
+    z-index: 2;
+    left:20%;
+    text-align: end;
+}
+.instructions ul{
+    padding:  10px 20px;
+}
+.instructions li, .instructions p{
+    font-size:23px;
+}
+
+.instructions button{
+    font-size: 16px;
+    padding:5px 6px;
+}
+
+
 .eaten-container{
     position: absolute;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
     left:46.8%;
     width:62px;
     height: 620px;
@@ -61,7 +112,7 @@ body{
     flex-direction: column;
     padding: 20px 20px;
     width:250px;
-    margin-top: 10px;
+    margin-top: 40px;
     height: 700px;
     background-color: rgb(24, 56, 56);
 }
